some overflow fixes

--- a/ip-web/css/all-old-ie.css
+++ b/ip-web/css/all-old-ie.css
@@ -439,7 +439,7 @@ a.btn-action:active { color: white; }
 .socialbar > li span { display: none; display: none; display: inline; }
 
 /* Navigations =================================================================== */
-.nav-main { position: relative; }
+.nav-main { position: relative; overflow: hidden; }
 .nav-main .inner-wrap { padding: 0; }
 .nav-main h2 { margin-bottom: 0; }
 .nav-main h2 a { display: block; padding: 0.5em 0; }
@@ -464,8 +464,8 @@ a.btn-action:active { color: white; }
 .cur.hassub.open .icon-chevron-down:before, .act.hassub.open .icon-chevron-down:before { content: "\e00b"; }
 
 .nav-sub { -webkit-transition: max-height 300ms ease-in-out, 1s; -moz-transition: max-height 300ms ease-in-out, 1s; -o-transition: max-height 300ms ease-in-out, 1s; transition: max-height 300ms ease-in-out, 1s; position: absolute; bottom: 0; top: 2.4em; left: 0; z-index: 1111; width: 100%; height: 3.1em; background-color: #ff8700; white-space: nowrap; overflow: hidden; }
-.hassub .nav-sub, .cur.hassub.open .nav-sub, .act.hassub.open .nav-sub { max-height: 0; overflow: hidden; max-height: 100px; overflow: visible; }
-.cur.hassub .nav-sub, .act.hassub .nav-sub, .open.hassub .nav-sub { max-height: 499px; }
+.hassub .nav-sub, .cur.hassub.open .nav-sub, .act.hassub.open .nav-sub { max-height: 0; overflow: hidden; }
+.cur.hassub .nav-sub, .act.hassub .nav-sub, .open.hassub .nav-sub { max-height: 499px; overflow: visible; }
 .nav-sub:before { content: ""; min-height: 2.4em; width: 100%; position: absolute; top: 0; left: 0; z-index: -1; background-color: #ffb766; }
 .nav-sub > ul { max-width: 1200px; margin: 0 auto; padding-bottom: 10px; -webkit-transition: -webkit-transform 300ms ease-out, 1s; -moz-transition: -moz-transform 300ms ease-out, 1s; -o-transition: -o-transform 300ms ease-out, 1s; transition: transform 300ms ease-out, 1s; }
 .nav-sub > ul > li { text-transform: none; display: inline-block; }
