--- a/ip-web/css/style.css
+++ b/ip-web/css/style.css
@@ -455,7 +455,7 @@ a.btn-action:active { color: white; }
 @media screen and (min-width: 768px) { .socialbar > li span { display: inline; } }
 
 /* Navigations =================================================================== */
-.nav-main { position: relative; }
+.nav-main { position: relative; overflow: hidden; }
 .nav-main .inner-wrap { padding: 0; }
 .nav-main h2 { margin-bottom: 0; }
 .nav-main h2 a { display: block; padding: 0.5em 0; }
@@ -487,8 +487,8 @@ a.btn-action:active { color: white; }
 
 .nav-sub { -webkit-transition: max-height 300ms ease-in-out, 1s; -moz-transition: max-height 300ms ease-in-out, 1s; -o-transition: max-height 300ms ease-in-out, 1s; transition: max-height 300ms ease-in-out, 1s; }
 .hassub .nav-sub, .cur.hassub.open .nav-sub, .act.hassub.open .nav-sub { max-height: 0; overflow: hidden; }
-@media screen and (min-width: 600px) { .hassub .nav-sub, .cur.hassub.open .nav-sub, .act.hassub.open .nav-sub { max-height: 100px; overflow: visible; } }
 .cur.hassub .nav-sub, .act.hassub .nav-sub, .open.hassub .nav-sub { max-height: 499px; }
+@media screen and (min-width: 600px) { .cur.hassub .nav-sub, .act.hassub .nav-sub, .open.hassub .nav-sub { overflow: visible; } }
 @media screen and (min-width: 600px) { .nav-sub { position: absolute; bottom: 0; top: 2.4em; left: 0; z-index: 1111; width: 100%; height: 3.1em; background-color: #ff8700; white-space: nowrap; overflow: hidden; }
   .nav-sub:before { content: ""; min-height: 2.4em; width: 100%; position: absolute; top: 0; left: 0; z-index: -1; background-color: #ffb766; } }
 @media screen and (min-width: 600px) { .nav-sub > ul { max-width: 1200px; margin: 0 auto; padding-bottom: 10px; -webkit-transition: -webkit-transform 300ms ease-out, 1s; -moz-transition: -moz-transform 300ms ease-out, 1s; -o-transition: -o-transform 300ms ease-out, 1s; transition: transform 300ms ease-out, 1s; } }
